/*
 * Copyright(c) 2012-2018 Intel Corporation
 * SPDX-License-Identifier: BSD-3-Clause
 */

syntax = "proto3";
package octf.proto;
import "opts.proto";

message LRUBuilderResult 
{   
    bool hit = 1;
}